customer/webclient/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webclient
  labels:
    app: self-service-agent
    component: webclient
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: self-service-agent
    component: webclient
